challenge note book

--- a/Mod0/Lecture7-DataTypes.ipynb
+++ b/Mod0/Lecture7-DataTypes.ipynb
@@ -261,7 +261,7 @@
     "- Differentiating between numeric and non-numeric data.\n",
     "- Using Python data structures like lists and dictionaries to manage data.\n",
     "\n",
-    "Understanding data types is essential for working with real-world datasets. Keep practicing, and you’ll be ready to tackle more complex scenarios!"
+    "Understanding data types is essential for working with real-world datasets. Keep practicing, and you’ll be ready to tackle more complex scenarios! thank you"
    ]
   }
  ],
