--- a/Mod0/CodeChallenges/Lecture7CC.ipynb
+++ b/Mod0/CodeChallenges/Lecture7CC.ipynb
@@ -49,15 +49,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Team Name: Golden Eagles\n",
+      "Sport: Basketbsall\n",
+      "Number of Players: 12\n",
+      "Team Captain: jordan Smith\n"
+     ]
+    }
+   ],
    "source": [
     "# Assign the variables\n",
-    "team_name = None  # Replace None with the team name\n",
-    "sport = None      # Replace None with the sport\n",
-    "num_players = None  # Replace None with the number of players\n",
-    "team_captain = None  # Replace None with the team captain's name\n",
+    "team_name = \"Golden Eagles\"  # Replace None with the team name\n",
+    "sport = \"Basketbsall\"      # Replace None with the sport\n",
+    "num_players = 12 # Replace None with the number of players\n",
+    "team_captain = \"jordan Smith\"  # Replace None with the team captain's name\n",
     "\n",
     "# Print the variables\n",
     "print(\"Team Name:\", team_name)\n",
@@ -88,14 +99,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Uppercase Team Name: GOLDEN EAGLES\n",
+      "Does the captain's name contain 'a'? Yes\n",
+      "Updated Sport Name: Basketbsall\n"
+     ]
+    }
+   ],
    "source": [
+    "team_name = \"Golden Eagles\"  # Replace None with the team name\n",
+    "sport = \"Basketbsall\"      # Replace None with the sport\n",
+    "num_players = 12 # Replace None with the number of players\n",
+    "team_captain = \"jordan Smith\"  # Replace None with the team captain's name\n",
     "# String manipulations\n",
-    "uppercase_team_name = None  # Convert the team name to uppercase\n",
-    "contains_a = None           # Check if the captain's name contains the letter \"a\"\n",
-    "new_sport = None            # Replace \"Basketball\" with \"Hoops\"\n",
+    "uppercase_team_name = team_name.upper()  # Convert the team name to uppercase\n",
+    "contains_a =  \"Yes\" if team_name.find(\"a\") != 1 else \"No\"\n",
+    " # Check if the captain's name contains the letter \"a\"\n",
+    "new_sport = sport.replace(\"Basketball\", \"Hoops\")           # Replace \"Basketball\" with \"Hoops\"\n",
     "\n",
     "# Print the results\n",
     "print(\"Uppercase Team Name:\", uppercase_team_name)\n",
@@ -124,19 +150,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Players List: [' Jordan Smith', 'Taylor Brown', 'Chris Jonhson', 'Alex Lee', 'Jamie Carter']\n",
+      "First Player:  Jordan Smith\n",
+      "Last Player: Alex Lee\n"
+     ]
+    }
+   ],
    "source": [
     "# Create a list of players\n",
-    "players = None  # Replace None with a list of player names\n",
+    "players = [\" Jordan Smith\", \"Taylor Brown\", \"Chris Jonhson\", \"Alex Lee\"]  # Replace None with a list of player names\n",
     "\n",
     "# Access the first and last players\n",
-    "first_player = None  # Access the first player\n",
-    "last_player = None   # Access the last player\n",
+    "first_player = players[0]  # Access the first player\n",
+    "last_player = players[-1]   # Access the last player\n",
     "\n",
     "# Add a new player to the list\n",
-    "players.append(None)  # Add \"Jamie Carter\"\n",
+    "players.append(\"Jamie Carter\")  # Add \"Jamie Carter\"\n",
     "\n",
     "# Print the results\n",
     "print(\"Players List:\", players)\n",
@@ -165,23 +201,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Team Info: {'Team Name': 'FC Barry', 'Sport': 'Soccer', 'Players': ['Mouctar', 'Mai', 'Habi', 'Thierno'], 'Positions': ['Guard', 'Forward', 'Center', 'Guard', 'Forward']}\n",
+      "Position of Second Player: Forward\n",
+      "Number of Guards: 2\n"
+     ]
+    }
+   ],
    "source": [
     "# Create a dictionary\n",
     "team_info = {\n",
-    "    \"Team Name\": None,  # Replace None with the team name\n",
-    "    \"Sport\": None,      # Replace None with the sport\n",
-    "    \"Players\": None,    # Replace None with the list of players\n",
-    "    \"Positions\": None   # Replace None with the list of positions\n",
+    "    \"Team Name\": \"FC Barry\",  # Replace None with the team name\n",
+    "    \"Sport\": \"Soccer\",      # Replace None with the sport\n",
+    "    \"Players\": [\"Mouctar\", \"Mai\" ,\"Habi\",\"Thierno\"], # Replace None with the list of players\n",
+    "    \"Positions\":[\"Guard\", \"Forward\", \"Center\", \"Guard\", \"Forward\"]    # Replace None with the list of positions\n",
     "}\n",
     "\n",
     "# Access the position of the second player\n",
-    "second_player_position = None  # Access the second position\n",
+    "second_player_position = team_info[\"Positions\"][1]  # Access the second position\n",
     "\n",
     "# Count the number of \"Guards\"\n",
-    "guard_count = None  # Count how many times \"Guard\" appears in the positions list\n",
+    "guard_count = team_info[\"Positions\"].count(\"Guard\")  # Count how many times \"Guard\" appears in the positions list\n",
     "\n",
     "# Print the results\n",
     "print(\"Team Info:\", team_info)\n",
@@ -206,19 +252,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total Players: 4\n",
+      "Unique Positions: {'Forward', 'Center', 'Guard'}\n",
+      "Is Jordan Smith the Captain? no\n"
+     ]
+    }
+   ],
    "source": [
     "# Calculate the number of players\n",
-    "total_players = None  # Use the len() function to calculate the number of players\n",
+    "total_players = len(team_info [\"Players\"])  # Use the len() function to calculate the number of players\n",
     "\n",
     "# Calculate the number of unique positions\n",
-    "unique_positions = None  # Use the set() function to find unique positions\n",
+    "unique_positions = set(team_info[\"Positions\"])  # Use the set() function to find unique positions\n",
     "\n",
     "# Check if \"Jordan Smith\" is the team captain\n",
-    "is_captain = None  # Use a comparison to check if \"Jordan Smith\" is the captain\n",
-    "\n",
+    "is_captain = \"Yes\" if \"Jordan Smith\" == team_captain else \"no\" # Use a comparison to check if \"Jordan Smith\" is the captain\n",
+    "team_captain\n",
     "# Print the results\n",
     "print(\"Total Players:\", total_players)\n",
     "print(\"Unique Positions:\", unique_positions)\n",
@@ -250,13 +306,34 @@
     "2. None\n",
     "3. None"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on built-in function len in module builtins:\n",
+      "\n",
+      "len(obj, /)\n",
+      "    Return the number of items in a container.\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "help(len)"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (learn-env)",
+   "display_name": "data-analysis-env",
    "language": "python",
-   "name": "learn-env"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -268,7 +345,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.9.22"
   }
  },
  "nbformat": 4,
