commited all my work

--- a/Mod0/CodeChallenges/Lecture7CC.ipynb
+++ b/Mod0/CodeChallenges/Lecture7CC.ipynb
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -59,7 +59,7 @@
       "Team Name: Golden Eagles\n",
       "Sport: Basketbsall\n",
       "Number of Players: 12\n",
-      "Team Captain: jordan Smith\n"
+      "Team Captain: Jordan Smith\n"
      ]
     }
    ],
@@ -68,7 +68,7 @@
     "team_name = \"Golden Eagles\"  # Replace None with the team name\n",
     "sport = \"Basketbsall\"      # Replace None with the sport\n",
     "num_players = 12 # Replace None with the number of players\n",
-    "team_captain = \"jordan Smith\"  # Replace None with the team captain's name\n",
+    "team_captain = \"Jordan Smith\"  # Replace None with the team captain's name\n",
     "\n",
     "# Print the variables\n",
     "print(\"Team Name:\", team_name)\n",
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -261,7 +261,7 @@
      "text": [
       "Total Players: 4\n",
       "Unique Positions: {'Forward', 'Center', 'Guard'}\n",
-      "Is Jordan Smith the Captain? no\n"
+      "Is Jordan Smith the Captain? Yes\n"
      ]
     }
    ],
