data challenge M1L3 completed

--- a/Mod1/M1L2-Numpy_STUDENT.ipynb
+++ b/Mod1/M1L2-Numpy_STUDENT.ipynb
@@ -29,12 +29,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Import NumPy \n",
-    "None"
+    "import numpy as np"
    ]
   },
   {
@@ -49,12 +49,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[23 30 16 20 38]\n"
+     ]
+    }
+   ],
    "source": [
-    "points = None\n",
+    "points = np.array([23,30,16,20,38])\n",
     "print(points)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([23, 16, 38])"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "points[::2]"
    ]
   },
   {
@@ -70,14 +98,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[25 10  5]\n",
+      " [18  7  8]\n",
+      " [30 12  4]\n",
+      " [22  9  6]\n",
+      " [15  5  7]]\n"
+     ]
+    }
+   ],
    "source": [
     "# Create a 2D array for player stats\n",
     "# Example: [[points, rebounds, assists], ...]\n",
     "\n",
-    "player_stats = None"
+    "pplayer_stats = np.array([[23,5,10],\n",
+    "                         [21,9,2],\n",
+    "                         [34,8,7]])\n",
+    "print(player_stats)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9.86326267607651\n",
+      "8.0\n",
+      "26.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "average_point = np.average(pplayer_stats[:,0])\n",
+    "median_rebounds = np.median(pplayer_stats[:,1])\n",
+    "std =np.std(pplayer_stats) \n",
+    "print(std)\n",
+    "print(median_rebounds)\n",
+    "print (average_point)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 5 10]\n",
+      " [ 9  2]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(pplayer_stats[0:2,1:])"
    ]
   },
   {
@@ -93,9 +178,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[38 32 49]\n"
+     ]
+    }
+   ],
    "source": [
     "# Calculate total stats for each player\n",
     "total_stats = np.sum(player_stats, axis=1)\n",
@@ -113,12 +206,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[23 21 34]\n",
+      " [ 5  9  8]\n",
+      " [10  2  7]]\n"
+     ]
+    }
+   ],
    "source": [
     "# Transpose the array\n",
-    "transposed_stats = None\n",
+    "transposed_stats = np.transpose(player_stats)\n",
     "print(transposed_stats)"
    ]
   },
@@ -135,13 +238,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1.         0.28278381]\n",
+      " [0.28278381 1.        ]]\n"
+     ]
+    }
+   ],
    "source": [
     "# Calculate correlation between points and assists -- what does the output mean?\n",
     "\n",
-    "correlation = None(player_stats[:, 0], player_stats[:, 2])\n",
+    "correlation = np.corrcoef(player_stats[:, 0], player_stats[:, 2])\n",
     "print(correlation)"
    ]
   },
@@ -171,9 +283,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.4142135623730951\n",
+      "9.0\n",
+      "22.0\n",
+      "16.5\n",
+      "[40 33 46 37 27]\n",
+      "2\n",
+      "Player with the highest total stats: Player 3\n",
+      "Total stats: 46\n"
+     ]
+    }
+   ],
    "source": [
     "# Player stats array\n",
     "player_stats = np.array([\n",
@@ -183,24 +310,62 @@
     "    [22, 9, 6],\n",
     "    [15, 5, 7]\n",
     "])\n",
-    "\n",
+    "average_point = np.average(player_stats[:,0])\n",
+    "median_rebounds = np.median(player_stats[:,1])\n",
+    "std_assist =np.std(player_stats[:,2]) \n",
+    "print(std_assist)\n",
+    "print(median_rebounds)\n",
+    "print (average_point)\n",
     "# Calculate total stats for each player\n",
-    "total_stats = None\n",
+    "total_stats = np.sum(player_stats, axis=1)\n",
+    "percentile_75= np.percentile(player_stats,75)\n",
+    "print(percentile_75)\n",
     "\n",
     "# Find the index of the player with the highest total stats\n",
-    "best_player_index = None\n",
+    "best_player_index = np.argmax(total_stats)\n",
+    "\n",
     "\n",
     "# Print the result\n",
+    "print(total_stats)\n",
+    "print(best_player_index)\n",
     "print(f\"Player with the highest total stats: Player {best_player_index + 1}\")\n",
     "print(f\"Total stats: {total_stats[best_player_index]}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-8.5\n",
+      "31.5\n"
+     ]
+    }
+   ],
+   "source": [
+    "# dealing with outliers\n",
+    "# calculating Q1 and Q3\n",
+    "Q1= np.percentile(player_stats,25)\n",
+    "Q3= np.percentile(player_stats,75)\n",
+    "# calculate IQR \n",
+    "IQR= Q3-Q1\n",
+    "#Calculate the lower bound and upper bound\n",
+    "lower_bound= Q1-(1.5 * IQR)\n",
+    "upper_bouncd= Q3+(1.5 * IQR)\n",
+    "print (lower_bound)\n",
+    "print (upper_bouncd)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (learn-env)",
+   "display_name": "data-analysis-env",
    "language": "python",
-   "name": "learn-env"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -212,7 +377,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.9.22"
   }
  },
  "nbformat": 4,
