--- a/Mod1/M1L3-Numpy2_STUDENT.ipynb
+++ b/Mod1/M1L3-Numpy2_STUDENT.ipynb
@@ -28,11 +28,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "None"
+    "import numpy as np"
    ]
   },
   {
@@ -46,9 +46,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[25 10  5]\n",
+      " [18  7  8]\n",
+      " [30 12  4]\n",
+      " [22  9  6]\n",
+      " [42  5 15]]\n"
+     ]
+    }
+   ],
    "source": [
     "# Player stats array -- run without changing the data\n",
     "player_stats = np.array([\n",
@@ -60,7 +72,7 @@
     "])\n",
     "\n",
     "# Print the dataset\n",
-    "None"
+    "print(player_stats)"
    ]
   },
   {
@@ -81,17 +93,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean stats: [27.4  8.6  7.6]\n",
+      "Median stats: [27.4  8.6  7.6]\n",
+      "Standard deviation stats: [8.28492607 2.41660919 3.92937654]\n"
+     ]
+    }
+   ],
    "source": [
-    "mean_stats = None\n",
+    "mean_stats = np.mean(player_stats, axis=0)\n",
     "print(\"Mean stats:\", mean_stats)\n",
     "\n",
-    "median_stats = None\n",
+    "median_stats = np.mean(player_stats, axis=0)\n",
     "print(\"Median stats:\", median_stats)\n",
     "\n",
-    "std_stats = None\n",
+    "std_stats = np.std(player_stats, axis=0)\n",
     "print(\"Standard deviation stats:\", std_stats)"
    ]
   },
@@ -118,11 +140,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Updated player stats:\n",
+      "[[25 10  5]\n",
+      " [18  7  8]\n",
+      " [30 12  4]\n",
+      " [22  9  6]\n",
+      " [42  5 15]\n",
+      " [20  8  6]]\n"
+     ]
+    }
+   ],
    "source": [
-    "new_player = None\n",
+    "new_player = np.array([20,8,6])\n",
     "player_stats = np.vstack([player_stats, new_player])\n",
     "print(\"Updated player stats:\")\n",
     "print(player_stats)"
@@ -143,16 +179,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Outliers in points: [42]\n"
+     ]
+    }
+   ],
    "source": [
-    "Q1 = None\n",
-    "Q3 = None\n",
-    "IQR = None\n",
+    "Q1 = np.percentile(player_stats[:,0],25)\n",
+    "Q3 = np.percentile(player_stats [:,0] ,75)\n",
+    "IQR = Q3-Q1\n",
     "\n",
-    "lower_bound = None\n",
-    "upper_bound = None\n",
+    "lower_bound = Q1-(1.5 * IQR)\n",
+    "upper_bound = Q3+(1.5 * IQR)\n",
     "\n",
     "outliers = player_stats[:, 0][(player_stats[:, 0] < lower_bound) | (player_stats[:, 0] > upper_bound)]\n",
     "print(\"Outliers in points:\", outliers)"
@@ -174,13 +218,21 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Outliers in points (using standard deviation): []\n"
+     ]
+    }
+   ],
    "source": [
-    "mean_points = None\n",
-    "std_points = None\n",
+    "mean_points = np.mean(player_stats[:,0])\n",
+    "std_points = np.std(player_stats[:,0])\n",
     "\n",
-    "lower_bound_std = None\n",
-    "upper_bound_std = None\n",
+    "lower_bound_std = mean_points - ( 3* std_points)\n",
+    "upper_bound_std = mean_points + ( 3* std_points)\n",
     "\n",
     "outliers_std = player_stats[:, 0][(player_stats[:, 0] < lower_bound_std) | (player_stats[:, 0] > upper_bound_std)]\n",
     "print(\"Outliers in points (using standard deviation):\", outliers_std)"
@@ -189,9 +241,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (learn-env)",
+   "display_name": "data-analysis-env",
    "language": "python",
-   "name": "learn-env"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -203,7 +255,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.9.22"
   }
  },
  "nbformat": 4,
