I updated my file and completed my challenge

--- a/Mod1/M1L3-Numpy2_STUDENT.ipynb
+++ b/Mod1/M1L3-Numpy2_STUDENT.ipynb
@@ -93,23 +93,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mean stats: [27.4  8.6  7.6]\n",
-      "Median stats: [27.4  8.6  7.6]\n",
-      "Standard deviation stats: [8.28492607 2.41660919 3.92937654]\n"
+      "Mean stats: [26.16666667  8.5         7.33333333]\n",
+      "Median stats: [26.16666667  8.5         7.33333333]\n",
+      "Standard deviation stats: [8.05018978 2.21735578 3.63623737]\n"
      ]
     }
    ],
    "source": [
-    "mean_stats = np.mean(player_stats, axis=0)\n",
+    "mean_stats = np.mean (player_stats, axis=0)\n",
     "print(\"Mean stats:\", mean_stats)\n",
-    "\n",
     "median_stats = np.mean(player_stats, axis=0)\n",
     "print(\"Median stats:\", median_stats)\n",
     "\n",
@@ -223,16 +222,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Outliers in points (using standard deviation): []\n"
+      "8.050189783822216\n",
+      "8.125\n",
+      "41.125\n",
+      "Outliers in points (using standard deviation): []\n",
+      "[]\n"
      ]
     }
    ],
    "source": [
     "mean_points = np.mean(player_stats[:,0])\n",
     "std_points = np.std(player_stats[:,0])\n",
+    "print( std_points)\n",
     "\n",
     "lower_bound_std = mean_points - ( 3* std_points)\n",
+    "print(lower_bound)\n",
     "upper_bound_std = mean_points + ( 3* std_points)\n",
+    "print(upper_bound)\n",
     "\n",
     "outliers_std = player_stats[:, 0][(player_stats[:, 0] < lower_bound_std) | (player_stats[:, 0] > upper_bound_std)]\n",
     "print(\"Outliers in points (using standard deviation):\", outliers_std)"
