changes not needed

--- a/Mod1/M1L3-Numpy2_STUDENT.ipynb
+++ b/Mod1/M1L3-Numpy2_STUDENT.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -93,16 +93,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mean stats: [26.16666667  8.5         7.33333333]\n",
-      "Median stats: [26.16666667  8.5         7.33333333]\n",
-      "Standard deviation stats: [8.05018978 2.21735578 3.63623737]\n"
+      "Mean stats: [27.4  8.6  7.6]\n",
+      "Median stats: [27.4  8.6  7.6]\n",
+      "Standard deviation stats: [8.28492607 2.41660919 3.92937654]\n"
      ]
     }
    ],
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -225,8 +225,7 @@
       "8.050189783822216\n",
       "8.125\n",
       "41.125\n",
-      "Outliers in points (using standard deviation): []\n",
-      "[]\n"
+      "Outliers in points (using standard deviation): []\n"
      ]
     }
    ],
