--- a/Mod1/M1L5-PandasPart2_STUDENT (1).ipynb
+++ b/Mod1/M1L5-PandasPart2_STUDENT (1).ipynb
@@ -29,12 +29,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Import Pandas & Numpy\n",
-    "None"
+    "import pandas as pd\n",
+    "import numpy as np "
    ]
   },
   {
@@ -46,11 +47,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = None\n"
+    "df = pd.read_csv(\"New_York_City_Leading_Causes_of_Death_20250605.csv\")\n"
    ]
   },
   {
@@ -62,11 +63,121 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Year</th>\n",
+       "      <th>Leading Cause</th>\n",
+       "      <th>Sex</th>\n",
+       "      <th>Race Ethnicity</th>\n",
+       "      <th>Deaths</th>\n",
+       "      <th>Death Rate</th>\n",
+       "      <th>Age Adjusted Death Rate</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2007</td>\n",
+       "      <td>Diabetes Mellitus (E10-E14)</td>\n",
+       "      <td>M</td>\n",
+       "      <td>Other Race/ Ethnicity</td>\n",
+       "      <td>11</td>\n",
+       "      <td>.</td>\n",
+       "      <td>.</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2010</td>\n",
+       "      <td>Diseases of Heart (I00-I09, I11, I13, I20-I51)</td>\n",
+       "      <td>F</td>\n",
+       "      <td>Not Stated/Unknown</td>\n",
+       "      <td>70</td>\n",
+       "      <td>.</td>\n",
+       "      <td>.</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2007</td>\n",
+       "      <td>Cerebrovascular Disease (Stroke: I60-I69)</td>\n",
+       "      <td>M</td>\n",
+       "      <td>Black Non-Hispanic</td>\n",
+       "      <td>213</td>\n",
+       "      <td>25</td>\n",
+       "      <td>33</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2007</td>\n",
+       "      <td>Atherosclerosis (I70)</td>\n",
+       "      <td>F</td>\n",
+       "      <td>Other Race/ Ethnicity</td>\n",
+       "      <td>.</td>\n",
+       "      <td>.</td>\n",
+       "      <td>.</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2014</td>\n",
+       "      <td>Malignant Neoplasms (Cancer: C00-C97)</td>\n",
+       "      <td>F</td>\n",
+       "      <td>Black Non-Hispanic</td>\n",
+       "      <td>1852</td>\n",
+       "      <td>176.5</td>\n",
+       "      <td>148.4</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Year                                   Leading Cause Sex  \\\n",
+       "0  2007                     Diabetes Mellitus (E10-E14)   M   \n",
+       "1  2010  Diseases of Heart (I00-I09, I11, I13, I20-I51)   F   \n",
+       "2  2007       Cerebrovascular Disease (Stroke: I60-I69)   M   \n",
+       "3  2007                           Atherosclerosis (I70)   F   \n",
+       "4  2014           Malignant Neoplasms (Cancer: C00-C97)   F   \n",
+       "\n",
+       "          Race Ethnicity Deaths Death Rate Age Adjusted Death Rate  \n",
+       "0  Other Race/ Ethnicity     11          .                       .  \n",
+       "1     Not Stated/Unknown     70          .                       .  \n",
+       "2     Black Non-Hispanic    213         25                      33  \n",
+       "3  Other Race/ Ethnicity      .          .                       .  \n",
+       "4     Black Non-Hispanic   1852      176.5                   148.4  "
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "None"
+    "df\n",
+    "df.dtypes\n",
+    "df.shape\n",
+    "df.keys()\n",
+    "df.head()"
    ]
   },
   {
@@ -78,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,10 +209,25 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Sex\n",
+       "F    217071.0\n",
+       "M    207927.0\n",
+       "Name: Deaths, dtype: float64"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "deaths_by_sex = None\n",
-    "print(deaths_by_sex)"
+    "deaths_by_sex = df.groupby(\"Sex\")['Deaths'].sum()\n",
+    "deaths_by_sex\n",
+    "# Female has the most deaths"
    ]
   },
   {
@@ -115,10 +241,223 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>Leading Cause</th>\n",
+       "      <th>Accidents Except Drug Posioning (V01-X39, X43, X45-X59, Y85-Y86)</th>\n",
+       "      <th>All Other Causes</th>\n",
+       "      <th>Alzheimer's Disease (G30)</th>\n",
+       "      <th>Aortic Aneurysm and Dissection (I71)</th>\n",
+       "      <th>Assault (Homicide: Y87.1, X85-Y09)</th>\n",
+       "      <th>Atherosclerosis (I70)</th>\n",
+       "      <th>Cerebrovascular Disease (Stroke: I60-I69)</th>\n",
+       "      <th>Certain Conditions originating in the Perinatal Period (P00-P96)</th>\n",
+       "      <th>Chronic Liver Disease and Cirrhosis (K70, K73)</th>\n",
+       "      <th>Chronic Lower Respiratory Diseases (J40-J47)</th>\n",
+       "      <th>...</th>\n",
+       "      <th>Insitu or Benign / Uncertain Neoplasms (D00-D48)</th>\n",
+       "      <th>Intentional Self-Harm (Suicide: X60-X84, Y87.0)</th>\n",
+       "      <th>Malignant Neoplasms (Cancer: C00-C97)</th>\n",
+       "      <th>Mental and Behavioral Disorders due to Accidental Poisoning and Other Psychoactive Substance Use (F11-F16, F18-F19, X40-X42, X44)</th>\n",
+       "      <th>Mental and Behavioral Disorders due to Use of Alcohol (F10)</th>\n",
+       "      <th>Nephritis, Nephrotic Syndrome and Nephrisis (N00-N07, N17-N19, N25-N27)</th>\n",
+       "      <th>Parkinson's Disease (G20)</th>\n",
+       "      <th>Septicemia (A40-A41)</th>\n",
+       "      <th>Tuberculosis (A16-A19)</th>\n",
+       "      <th>Viral Hepatitis (B15-B19)</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Sex</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>F</th>\n",
+       "      <td>35</td>\n",
+       "      <td>48</td>\n",
+       "      <td>31</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>48</td>\n",
+       "      <td>13</td>\n",
+       "      <td>8</td>\n",
+       "      <td>45</td>\n",
+       "      <td>...</td>\n",
+       "      <td>5</td>\n",
+       "      <td>12</td>\n",
+       "      <td>48</td>\n",
+       "      <td>12</td>\n",
+       "      <td>0</td>\n",
+       "      <td>14</td>\n",
+       "      <td>1</td>\n",
+       "      <td>11</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>M</th>\n",
+       "      <td>45</td>\n",
+       "      <td>48</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>17</td>\n",
+       "      <td>0</td>\n",
+       "      <td>42</td>\n",
+       "      <td>13</td>\n",
+       "      <td>21</td>\n",
+       "      <td>43</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>26</td>\n",
+       "      <td>48</td>\n",
+       "      <td>27</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>2 rows × 26 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Leading Cause  Accidents Except Drug Posioning (V01-X39, X43, X45-X59, Y85-Y86)  \\\n",
+       "Sex                                                                               \n",
+       "F                                                             35                  \n",
+       "M                                                             45                  \n",
+       "\n",
+       "Leading Cause  All Other Causes  Alzheimer's Disease (G30)  \\\n",
+       "Sex                                                          \n",
+       "F                            48                         31   \n",
+       "M                            48                          1   \n",
+       "\n",
+       "Leading Cause  Aortic Aneurysm and Dissection (I71)  \\\n",
+       "Sex                                                   \n",
+       "F                                                 2   \n",
+       "M                                                 1   \n",
+       "\n",
+       "Leading Cause  Assault (Homicide: Y87.1, X85-Y09)  Atherosclerosis (I70)  \\\n",
+       "Sex                                                                        \n",
+       "F                                               3                      3   \n",
+       "M                                              17                      0   \n",
+       "\n",
+       "Leading Cause  Cerebrovascular Disease (Stroke: I60-I69)  \\\n",
+       "Sex                                                        \n",
+       "F                                                     48   \n",
+       "M                                                     42   \n",
+       "\n",
+       "Leading Cause  Certain Conditions originating in the Perinatal Period (P00-P96)  \\\n",
+       "Sex                                                                               \n",
+       "F                                                             13                  \n",
+       "M                                                             13                  \n",
+       "\n",
+       "Leading Cause  Chronic Liver Disease and Cirrhosis (K70, K73)  \\\n",
+       "Sex                                                             \n",
+       "F                                                           8   \n",
+       "M                                                          21   \n",
+       "\n",
+       "Leading Cause  Chronic Lower Respiratory Diseases (J40-J47)  ...  \\\n",
+       "Sex                                                          ...   \n",
+       "F                                                        45  ...   \n",
+       "M                                                        43  ...   \n",
+       "\n",
+       "Leading Cause  Insitu or Benign / Uncertain Neoplasms (D00-D48)  \\\n",
+       "Sex                                                               \n",
+       "F                                                             5   \n",
+       "M                                                             0   \n",
+       "\n",
+       "Leading Cause  Intentional Self-Harm (Suicide: X60-X84, Y87.0)  \\\n",
+       "Sex                                                              \n",
+       "F                                                           12   \n",
+       "M                                                           26   \n",
+       "\n",
+       "Leading Cause  Malignant Neoplasms (Cancer: C00-C97)  \\\n",
+       "Sex                                                    \n",
+       "F                                                 48   \n",
+       "M                                                 48   \n",
+       "\n",
+       "Leading Cause  Mental and Behavioral Disorders due to Accidental Poisoning and Other Psychoactive Substance Use (F11-F16, F18-F19, X40-X42, X44)  \\\n",
+       "Sex                                                                                                                                                \n",
+       "F                                                             12                                                                                   \n",
+       "M                                                             27                                                                                   \n",
+       "\n",
+       "Leading Cause  Mental and Behavioral Disorders due to Use of Alcohol (F10)  \\\n",
+       "Sex                                                                          \n",
+       "F                                                              0             \n",
+       "M                                                              2             \n",
+       "\n",
+       "Leading Cause  Nephritis, Nephrotic Syndrome and Nephrisis (N00-N07, N17-N19, N25-N27)  \\\n",
+       "Sex                                                                                      \n",
+       "F                                                             14                         \n",
+       "M                                                              3                         \n",
+       "\n",
+       "Leading Cause  Parkinson's Disease (G20)  Septicemia (A40-A41)  \\\n",
+       "Sex                                                              \n",
+       "F                                      1                    11   \n",
+       "M                                      0                     2   \n",
+       "\n",
+       "Leading Cause  Tuberculosis (A16-A19)  Viral Hepatitis (B15-B19)  \n",
+       "Sex                                                               \n",
+       "F                                   1                          2  \n",
+       "M                                   0                          3  \n",
+       "\n",
+       "[2 rows x 26 columns]"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "cause_by_sex = None\n",
-    "cause_by_sex"
+    "cause_by_sex = pd.crosstab(df['Sex'],df['Leading Cause'])\n",
+    "cause_by_sex\n",
+    "\n",
+    "#The alzheimer disease is causes death for majoritary to female"
    ]
   },
   {
@@ -132,9 +471,22 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.int64(0)"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "None"
+    "duplicated = df.duplicated().sum()\n",
+    "duplicated\n",
+    "#no duplicated values"
    ]
   },
   {
@@ -150,9 +502,27 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Year\n",
+      "2008    54138.0\n",
+      "Name: Deaths, dtype: float64\n"
+     ]
+    }
+   ],
    "source": [
-    "None"
+    "df.head()\n",
+    "year_grouped = df.groupby(\"Year\")[\"Deaths\"].sum()\n",
+    "year_grouped\n",
+    "max_deaths= year_grouped.max()\n",
+    "print(year_grouped.loc[year_grouped==max_deaths])\n",
+    "\n",
+    "#option 2 \n",
+    "#year_grouped_max_death = year_grouped[year_grouped == max_deaths]\n",
+    "#year_grouped_max_death"
    ]
   },
   {
@@ -164,19 +534,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
-    "None"
+    "#df['Death Rate'].astype('Float64')"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (learn-env)",
+   "display_name": "data-analysis-env",
    "language": "python",
-   "name": "learn-env"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -188,7 +558,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.9.22"
   }
  },
  "nbformat": 4,
